# tmp

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu20  Makefile  README.md  dbg.rviz  requirements.txt
data/20211026/: circuitoNavegacion_ejemplo2.xml  circuitoNavegacion_ejemplo3.xml  circuitoNavegacion_emplo1.xml
demos/: dbg.bash  pursuit_path_tracking.bash  slam-gmapping.bash
src/: mylib.cpp  mylib.h  pymylib.cpp
src/path_tracking/: CMakeLists.txt  package.xml  setup.py
src/path_tracking/action/: TrackPath.action
src/path_tracking/nodes/: path_tracking_client.py
src/path_tracking/src/path_tracking/: __init__.py  client.py  server.py
src/path_tracking/src/path_tracking/geometry2d/: __init__.py  geometry2d.py
src/path_tracking/src/path_tracking/kinematics/: __init__.py  kinematics.py
src/tecna_turtle_bringup/: CMakeLists.txt  package.xml
src/tecna_turtle_bringup/launch/: tecna_turtle.launch
src/tecna_turtle_bringup/nodes/: diff_drive_controller.py  diff_drive_odometry.py  modbus_mock_server.py  plc.py
src/tecna_turtle_description/: CMakeLists.txt  package.xml
src/tecna_turtle_description/meshes/: pf_r2000.dae  wheel.stl
src/tecna_turtle_description/rviz/: tecna_turtle.rviz
src/tecna_turtle_description/urdf/: common_properties.xacro  robot.urdf.xacro
src/tecna_turtle_description/urdf/sensors/: pf_r2000.urdf.xacro
src/tecna_turtle_gazebo/: CMakeLists.txt  package.xml
src/tecna_turtle_gazebo/launch/: spawn.launch  spawn_robot.launch  spawn_world.launch
src/tecna_turtle_gazebo/worlds/: empty.world  simple.world
src/tecna_turtle_localization/: CMakeLists.txt  package.xml
src/tecna_turtle_localization/launch/: lidar_amcl.launch  lidar_gmapping.launch
src/tecna_turtle_localization/maps/: simple_world.pgm  simple_world.yaml
src/tecna_turtle_localization/rviz/: lidar_amcl.rviz  lidar_gmapping.rviz
src/tecna_turtle_msgs/: CMakeLists.txt  package.xml
src/tecna_turtle_msgs/msg/: DiffDriveWheelVel.msg
src/tecna_turtle_path_tracking/: CMakeLists.txt  package.xml
src/tecna_turtle_path_tracking/nodes/: path_tracking_plc_workaround.py
src/tecna_turtle_teleop/: CMakeLists.txt  package.xml
src/tecna_turtle_teleop/launch/: keyboard.launch
src/tecna_turtle_teleop/nodes/: keyboard_teleop.py
src/upnabot_path_tracking/: CMakeLists.txt  package.xml
src/upnabot_path_tracking/cfg/: PursuitPathTracking.cfg
src/upnabot_path_tracking/launch/: pursuit_path_tracking.launch
src/upnabot_path_tracking/nodes/: pursuit_path_tracking_server.py
src/upnabot_path_tracking/param/: path_tracking.yaml
src/upnabot_path_tracking/rviz/: pursuit.rviz
src/upnabot_path_tracking/scripts/: track_paths_0.bash  track_paths_1.bash  track_paths_2.bash  track_paths_demo.bash
