<package>

  <name>path_tracking</name>
  <version>0.0.0</version>
  <description>
    path_tracking is a package that contains functions and classes that simplify the implementation of path_tracking in robots
  </description>
  <author>Manuel Prieto</author>
  <maintainer email="manuel.prieto@unavarra.es">Manuel Prieto</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
