<package>

  <name>tecna_turtle_bringup</name>
  <version>0.0.0</version>
  <description>
    tecna_turtle_bringup provides roslaunch scripts for starting the tecna_turtle robot hardware
  </description>
  <author>Manuel Prieto</author>
  <maintainer email="manuel.prieto@unavarra.es">Manuel Prieto</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
