<package>

  <name>tecna_turtle_localization</name>
  <version>0.0.0</version>
  <description>
    tecna_turtle localization and map creation
  </description>
  <author>Manuel Prieto</author>
  <maintainer email="manuel.prieto@unavarra.es">Manuel Prieto</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
