<?xml version="1.0"?>
<package format="2">

  <name>tecna_turtle_teleop</name>
  <version>0.0.0</version>
  <description>The tecna_turtle teleoperation package</description>
  <maintainer email="manuel.prieto@unavarra.es">manu</maintainer>
  <license>BST</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

</package>
